Added dev-mode hot reload that restarts the application on class changes and refreshes the browser
A Reloader supervises the application in a separate JVM, the application serves a reload stream at the reserved /__rife__/reload path and injects a small script into its pages or places it with the webapp:reloadScript value.